WINODA-5 Added modified Duisburg-Essen adjustments

--- a/src/main/resources/config/winoda/mycore.properties
+++ b/src/main/resources/config/winoda/mycore.properties
@@ -1,22 +1,100 @@
-#
-# This file is part of ***  M y C o R e  ***
-# See http://www.mycore.de/ for details.
-#
-# MyCoRe is free software: you can redistribute it and/or modify
-# it under the terms of the GNU General Public License as published by
-# the Free Software Foundation, either version 3 of the License, or
-# (at your option) any later version.
-#
-# MyCoRe is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-# GNU General Public License for more details.
-#
-# You should have received a copy of the GNU General Public License
-# along with MyCoRe.  If not, see <http://www.gnu.org/licenses/>.
-#
+###################################################################################################
+#                                                                                                 #
+# basic application configuration                                                                 #
+#                                                                                                 #
+###################################################################################################
 
-# $Revision$ : $Date$
+# project name
+  MCR.NameOfProject=WiNoDa
+  MIR.projectid.default=winoda
 
-MCR.NameOfProject=winoda
+# application base URL
+  MCR.baseurl=https://oer.winoda.de
+  MIR.CanonicalBaseURL=https://oer.winoda.de/
+
+# supported languages
 MCR.Metadata.Languages=de,en
+
+# Layout
+  MIR.CustomLayout.JS=project.js
+  MIR.EditorForms.CustomIncludes=%MIR.EditorForms.CustomIncludes%,xslStyle:editor/mir2xeditor:webapp:editor/editor-customization.xed
+
+# Classification sorting
+  MCR.URIResolver.Classification.Sort.mir_licenses=false
+  MCR.URIResolver.Classification.Sort.mir_filetype=false
+  MCR.URIResolver.Classification.Sort.noteTypes=false
+
+  ###################################################################################################
+#                                                                                                 #
+# Access control                                                                                  #
+#                                                                                                 #
+###################################################################################################
+
+# Access keys
+  MCR.ACL.AccessKey.Strategy.AllowedObjectTypes=
+
+# Access strategy
+  MIR.Access.Strategy.Classifications=mir_access,state
+
+# grant author all permissions while a document is in state new
+  MCR.Access.Strategy.CreatorPermissions=read,writedb,view-derivate,deletedb
+
+# Allow the following user roles to search after all objects
+  MIR.OwnerStrategy.AllowedRolesForSearch=admin,editor,submitter,reviewer,user
+
+
+###################################################################################################
+#                                                                                                 #
+# Worklow configuration                                                                           #
+#                                                                                                 #
+###################################################################################################
+
+  MCR.Access.Strategy.SubmittedCategory=state:new
+  MCR.Metadata.Service.State.Category.Default=new
+  MIR.Workflow.Menu=true
+  MIR.Workflow.Box=true
+
+
+###################################################################################################
+#                                                                                                 #
+# Generic mail configuration for MCRMailer                                                        #
+#                                                                                                 #
+###################################################################################################
+
+# The server for outgoing mails
+  MCR.Mail.Server=mailer.gbv.de
+
+# The mail protocol
+  MCR.Mail.Protocol=smtp
+  MCR.Mail.Sender=%MCR.mir-module.MailSender%
+  MCR.Mail.Address=
+
+# The debug option
+  MCR.Mail.Debug=false
+
+# Encoding for the mail
+  MCR.Mail.Encoding=UTF-8
+
+# Number of send tries
+  MCR.Mail.NumTries=3
+
+###################################################################################################
+#                                                                                                 #
+# URN configuration                                                                               #
+#                                                                                                 #
+###################################################################################################
+
+  MCR.URN.Resolver.MasterURL=https://nbn-resolving.org/
+  MCR.PI.MetadataService.MODSURN.Prefix=urn:nbn:de:0307
+  MCR.PI.Generator.TypeYearCountURN.GeneralPattern=urn:nbn:de:0307-$ObjectDate-$Count-
+  MCR.PI.Generator.TypeYearCountURN.DateFormat=yyyyMMdd
+  MCR.PI.Generator.TypeYearCountURN.CountPrecision=3
+
+###################################################################################################
+#                                                                                                 #
+# Enrichment Resolver                                                                             #
+#                                                                                                 #
+###################################################################################################
+
+  MCR.MODS.EnrichmentResolver.DataSources.import=(Scopus PubMed IEEE CrossRef DataCite) OADOI GBV ZDB JOP
+
